hphp/hack/test/typecheck/constraints/multi_as_invoke_bad.php.like_types.exp
File "multi_as_invoke_bad.php", line 21, characters 20-21:
Invalid argument (Typing[4110])
File "multi_as_invoke_bad.php", line 13, characters 27-27:
Expected I
File "multi_as_invoke_bad.php", line 19, characters 23-23:
But got T
File "multi_as_invoke_bad.php", line 22, characters 20-21:
Invalid argument (Typing[4110])
File "multi_as_invoke_bad.php", line 16, characters 27-27:
Expected J
File "multi_as_invoke_bad.php", line 19, characters 23-23:
But got T
File "multi_as_invoke_bad.php", line 23, characters 9-11:
You are trying to access the member Foo but this is not an object, it is a value of generic type T (Typing[4062])
File "multi_as_invoke_bad.php", line 19, characters 23-23:
Definition is here
File "multi_as_invoke_bad.php", line 24, characters 9-12:
You are trying to access the member Bong but this is not an object, it is a value of generic type T (Typing[4062])
File "multi_as_invoke_bad.php", line 19, characters 23-23:
Definition is here
